third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/pin_data/unexpected_args.stderr
error: expected `PinnedDrop`
 --> tests/ui/compile-fail/pin_data/unexpected_args.rs:3:12
  |
3 | #[pin_data(Bar)]
  |            ^^^
